--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Course Title Goes Here</title>
-<meta name="charset" content="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="./app.3b44.css?7ec3c08ea682b0f07b15" rel="stylesheet"></head>
+<meta name="charset" content="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="./app.3b44.css?ec912316c45495e2d422" rel="stylesheet"></head>
 <body>
 <div id="app">
 </div>
-<script src="./file.app.7ec3.js?7ec3c08ea682b0f07b15"></script></body>
+<script src="./file.app.ec91.js?ec912316c45495e2d422"></script></body>
 </html>
